# axiom-network

./: .gitignore  AI-CONSENSUS-AUDIT.md  Cargo.toml  GUARDIAN-DESIGN.md  LICENSE  README.md  RELEASING.md
client/: Cargo.toml
client/src/: api.rs  cli.rs  config.rs  error.rs  main.rs  state.rs
client/src/ui/: mod.rs
crates/axiom-ai/: Cargo.toml
crates/axiom-ai/src/: anomaly_detection.rs  axiommind_v2.rs  compute_types.rs  inference.rs  lib.rs  monitoring.rs  neural_network.rs  protocol.rs  registry.rs  reinforcement_learning.rs  reputation.rs  self_healing.rs  settlement.rs  types.rs  verifier.rs  worker.rs
crates/axiom-ai/src/guardian/: agent.rs  aggregation.rs  decision.rs  isolation_tests.rs  mod.rs  model.rs  report.rs  seeded_rng.rs  state.rs
crates/axiom-ai/tests/: protocol_tests.rs
crates/axiom-cli/: Cargo.toml
crates/axiom-cli/src/: bump_fee.rs  keygen.rs  main.rs  p2p.rs
crates/axiom-crypto/: Cargo.toml
crates/axiom-crypto/src/: error.rs  hash.rs  kem_v2.rs  lib.rs  sign.rs
crates/axiom-ct/: Cargo.toml
crates/axiom-ct/src/: commitment.rs  error.rs  lib.rs  output.rs  range_proof.rs
crates/axiom-guard/: Cargo.toml
crates/axiom-guard/src/: alerts.rs  detector.rs  fingerprint.rs  fingerprint_v2.rs  guard.rs  learning.rs  lib.rs  reputation.rs  threat.rs
crates/axiom-monitor/: Cargo.toml
crates/axiom-monitor/src/: agent.rs  analyzer.rs  lib.rs  metrics.rs  optimizer.rs  types.rs
crates/axiom-node/: Cargo.toml
crates/axiom-node/src/: anomaly.rs  block_index.rs  checkpoints.rs  community.rs  config.rs  fork.rs  fork_choice_log.rs  genesis.rs  lib.rs  mempool.rs  mining_snapshot.rs  node.rs  reorg.rs  state.rs  testnet.rs  validation.rs  watchdog.rs
crates/axiom-node/src/network/: discovery.rs  dos_protection.rs  encryption.rs  limits.rs  manager.rs  message.rs  mod.rs  peer.rs  protocol.rs  scoring.rs  service.rs  transport.rs  upnp.rs
crates/axiom-node/src/network/p2p_v2/: flow.rs  handshake.rs  identity.rs  mod.rs  session.rs  transport.rs
crates/axiom-node/tests/: chain_selection_tests.rs  code_hardening_audit.rs  confidential_tx_test.rs  consensus_test.rs  crash_recovery_tests.rs  difficulty_test.rs  discovery_test.rs  fork_test.rs  fuzz_tests.rs  ibd_catchup_from_zero.rs  ibd_gates_live_traffic.rs  ibd_real_socket_roundtrip.rs  integration_smoke_test.rs  integration_test.rs  multi_node_chaos_tests.rs  network_security_tests.rs  peer_manager_shared_backchannel.rs  performance_tests.rs  property_invariant_tests.rs  reorg_integration_test.rs  reorg_test.rs  security_fixes_test.rs  security_hardening_tests.rs  security_integration_tests.rs  security_stress_test.rs  testnet_stability_test.rs  tx_relay_test.rs  v2_handshake_to_transport_e2e.rs  v2_nonce_lifecycle_triage.rs  v2_nonce_replay_protection.rs
crates/axiom-primitives/: Cargo.toml
crates/axiom-primitives/src/: amount.rs  error.rs  hash.rs  keys.rs  lib.rs
crates/axiom-protocol/: Cargo.toml
crates/axiom-protocol/src/: error.rs  lib.rs  serialize.rs  transaction.rs  transaction_v2.rs
crates/axiom-rpc/: Cargo.toml
crates/axiom-rpc/src/: auth.rs  axiommind_handlers.rs  error.rs  handlers.rs  lib.rs  rate_limiter.rs  server.rs  types.rs  ws.rs
crates/axiom-rpc/tests/: ai_test.rs  attack_simulations.rs  auth_test.rs  compute_integration_tests.rs  integration_test.rs  phase17_test.rs  testnet_simulation.rs  ws_test.rs
crates/axiom-signer/: Cargo.toml
crates/axiom-signer/src/: error.rs  lib.rs  signer.rs
crates/axiom-storage/: Cargo.toml
crates/axiom-storage/src/: batch.rs  db.rs  error.rs  keys.rs  lib.rs  nonce.rs  tx_index.rs  undo.rs  utxo.rs
crates/axiom-storage/tests/: integration_test.rs
crates/axiom-wallet/: Cargo.toml
crates/axiom-wallet/src/: address.rs  builder.rs  error.rs  keypair.rs  keystore.rs  lib.rs  rotation_v2.rs  safety.rs  seed.rs  signing.rs  tests.rs  wallet.rs
deploy/: axiom-node-windows.xml  axiom-node.service  deploy-production.sh
docs/: API.md  ARCHITECTURE.md  CONSENSUS-RULES.md  ECONOMICS.md  MODULES.md  OPERATOR_RUNBOOK.md  PROTOCOL.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v2.0.0-testnet.1.md  RELEASE_NOTES_v2.0.0-testnet.2.md  RELEASE_NOTES_v2.0.0-testnet.3.md  RELEASE_NOTES_v2.0.0-testnet.4.md  RELEASE_NOTES_v2.0.0-testnet.5.md  RELEASE_NOTES_v2.0.0-testnet.6.md  RPC-REFERENCE.md  SECURITY.md  V2_PROTOCOL.md  VERIFYING_RELEASES.md  minisign.pub
scripts/: build-dist.sh  build-release-windows.ps1  build-release.sh  install.bat  install.sh  make-sha256sums.sh  run-node.ps1  run-node.sh  start-node.ps1  start-node.sh  update-downloads-page.sh  verify-release.sh
server/: Cargo.toml  axiom-mind.service  axiom_mind.py  requirements_mind.txt
server/axiom-mind/: __init__.py  anomaly_engine.py  audit.py  correlation_engine.py  executor.py  local_intelligence.py  models.py  policy.py  risk_scoring.py  rule_engine.py
server/axiom-mind/tests/: __init__.py  test_integration.py  test_offline_operation.py  test_security_boundaries.py
server/migrations/: 20260328_init.sql  20260329_add_public_key.sql  20260411_distributed_security.sql
server/src/: config.rs  db.rs  db_simple.rs  error.rs  main.rs  permissions.rs  rate_limit.rs  reputation.rs  state.rs
server/src/auth/: challenge.rs  jwt.rs  mod.rs  session.rs
server/src/handlers/: audit.rs  auth.rs  disputes.rs  health.rs  jobs.rs  messages.rs  mod.rs  moderation.rs  roles.rs  users.rs
server/src/middleware/: auth.rs  mod.rs  permissions.rs  security.rs
server/tests/: auth_integration_test.rs  phase8_integration_tests.rs
shared/: Cargo.toml
shared/src/: crypto.rs  error.rs  lib.rs  models.rs  protocol.rs
wallet/: index.html  package-lock.json  package.json
wallet/src-tauri/: Cargo.toml  tauri.conf.json
wallet/src-tauri/capabilities/: default.json
wallet/src-tauri/src/: cache.rs  error.rs  keyring.rs  main.rs  rpc.rs  security.rs  state.rs
wallet/src-tauri/src/commands/: account.rs  mod.rs  security.rs  settings.rs  transaction.rs  wallet.rs
web/: about.html  architecture.html  docs.html  downloads.html  faq.html  index.html  mining.html  releases.html  (+4 more)
(+40 files in other folders)
