[workspace]
resolver = "2"
members = [
    "crates/axiom-primitives",
    "crates/axiom-crypto",
    "crates/axiom-protocol",
    "crates/axiom-consensus",
    "crates/axiom-storage",
    "crates/axiom-node",
    "crates/axiom-rpc",
    "crates/axiom-wallet",
    "crates/axiom-signer",
    "crates/axiom-cli",
    "crates/axiom-ai",
    "crates/axiom-ct",
    "crates/axiom-guard",
    "crates/axiom-monitor",
    "shared",
    "server",
    "client",
    "wallet/src-tauri",
]

[workspace.package]
version = "1.0.1-testnet.7"
edition = "2021"
license = "MIT"
authors = ["Kantoshi Miyamura"]
description = "Axiom Network — post-quantum blockchain"
repository = "https://github.com/Ayano-X-Tech/axiom-network"
homepage = "https://github.com/Ayano-X-Tech/axiom-network"
keywords = ["blockchain", "post-quantum", "ml-dsa", "cryptocurrency"]
categories = ["cryptography", "network-programming"]

[workspace.dependencies]
axiom-primitives = { path = "crates/axiom-primitives" }
axiom-ct = { path = "crates/axiom-ct" }
axiom-crypto = { path = "crates/axiom-crypto" }
axiom-protocol = { path = "crates/axiom-protocol" }
axiom-consensus = { path = "crates/axiom-consensus" }
axiom-storage = { path = "crates/axiom-storage" }
axiom-node = { path = "crates/axiom-node" }
axiom-rpc = { path = "crates/axiom-rpc" }
axiom-wallet = { path = "crates/axiom-wallet" }
axiom-signer = { path = "crates/axiom-signer" }
axiom-ai = { path = "crates/axiom-ai" }
axiom-guard = { path = "crates/axiom-guard" }
axiom-monitor = { path = "crates/axiom-monitor" }

# Community platform crates
axiom-community-shared = { path = "shared" }

sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bincode = { version = "2", features = ["serde"] }
fjall = "2"
tokio = "1.42"
ml-dsa = "0.0.4"
signature = "2"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = { version = "1.6", features = ["zeroize_derive"] }
subtle = "2.5"
hex = "0.4"
sha3 = "0.10"
rand = "0.8"
async-trait = "0.1"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
tracing = "0.1"
proptest = "1.3"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
hyper = "1.1"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
postgres = "0.19"
jsonwebtoken = "9.2"
dotenv = "0.15"
config = { version = "0.13", features = ["toml"] }
governor = "0.6"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
futures = "0.3"
tokio-util = "0.7"
ratatui = "0.25"
crossterm = { version = "0.27", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
