[package]
name = "axiom-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axiom-primitives.workspace = true
sha2.workspace = true
thiserror.workspace = true
rand = "0.8"
ml-dsa.workspace = true
signature.workspace = true
rand_core.workspace = true
