[package]
name = "axiom-ct"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Pedersen commitments and Bulletproof range proofs for Axiom Network confidential transactions"

[dependencies]
# bulletproofs v4 internally uses curve25519-dalek-ng (aliased as curve25519-dalek).
# We declare the same alias so our types are compatible with bulletproofs' PedersenGens.
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4" }
bulletproofs = "4"
merlin = "3"
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
# sha3 v0.9 implements digest v0.9, which is required by curve25519-dalek-ng v4
sha3 = "0.9"
zeroize = { version = "1.8", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0"
