[package]
name = "axiom-guard"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axiom-primitives.workspace = true
axiom-consensus.workspace = true
axiom-wallet = { path = "../axiom-wallet" }
axiom-crypto = { path = "../axiom-crypto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }
# v2-dev: typed errors for fingerprint_v2. Workspace-wide standard.
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
