[package]
name = "axiom-monitor"
version.workspace = true
edition = "2021"

[dependencies]
axiom-node = { workspace = true }
axiom-consensus = { workspace = true }
axiom-storage = { workspace = true }
axiom-guard = { workspace = true }
axiom-primitives = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
tracing = "0.1"
bincode = { workspace = true }
hex = "0.4"
