[package]
name = "axiom-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axiom-primitives.workspace = true
axiom-crypto.workspace = true
axiom-protocol.workspace = true
axiom-consensus.workspace = true
axiom-storage.workspace = true
axiom-ct = { path = "../axiom-ct" }
thiserror.workspace = true
serde.workspace = true
bincode.workspace = true
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
hex = "0.4"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2.workspace = true
rand_core.workspace = true

[dev-dependencies]
tempfile = "3.8"
axiom-wallet.workspace = true
