[package]
name = "axiom-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axiom-primitives.workspace = true
axiom-crypto.workspace = true
axiom-protocol.workspace = true
axiom-consensus.workspace = true
axiom-storage.workspace = true
axiom-ct = { path = "../axiom-ct" }
thiserror.workspace = true
serde.workspace = true
bincode.workspace = true
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
hex = "0.4"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2.workspace = true
rand_core.workspace = true
# v2-dev: classical half of the hybrid identity proof in p2p_v2.
# Pure Rust, audited. Pinned to 2.x; verification is the only function
# called and is locked behind the v2 handshake which is not wired into
# the runtime yet.
ed25519-dalek = "2"
# v2-dev: UPnP IGD client for opt-in NAT port-forwarding on node startup.
# The mapping is best-effort and time-limited; failure does not affect
# node correctness — the node simply falls back to outbound-only.
igd-next = { version = "0.17", default-features = false, features = ["aio_tokio"] }

[dev-dependencies]
tempfile = "3.8"
axiom-wallet.workspace = true

[features]
# Enables the confidential-transaction test suite. Requires axiom-protocol's
# own `axiom-ct` feature to be active for ConfidentialTransfer (de)serialization.
default = []
axiom-ct = []
