[package]
name = "axiom-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axiom-primitives.workspace = true
axiom-protocol.workspace = true
axiom-consensus.workspace = true
axiom-crypto.workspace = true
axiom-ct = { path = "../axiom-ct" }
fjall.workspace = true
bincode.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile = "3.8"
