[package]
name = "axiom-wallet"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axiom-primitives.workspace = true
axiom-crypto.workspace = true
axiom-protocol.workspace = true
axiom-ct = { path = "../axiom-ct" }
thiserror.workspace = true
serde.workspace = true
sha2.workspace = true
ml-dsa.workspace = true
signature.workspace = true
rand_core.workspace = true

hex = "0.4"
rand = "0.8"

# Encrypted keystore: Argon2id KDF + XChaCha20-Poly1305 AEAD
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["derive"] }

# Keystore JSON serialization
serde_json = "1"

# BIP39 mnemonic seed phrase
bip39 = "2"

# HKDF-SHA512 for deterministic account key derivation
hkdf = "0.12"

# Constant-time byte comparison for address checksum and other security-sensitive paths
subtle = { workspace = true }

[dev-dependencies]
