[package]
name = "axiom-desktop-wallet"
version = "1.0.0"
edition = "2021"
description = "Axiom Network — Post-Quantum Desktop Wallet"
authors = ["Kantoshi Miyamura"]
license = "MIT"

[dependencies]
axiom-wallet = { path = "../../crates/axiom-wallet" }
axiom-primitives = { path = "../../crates/axiom-primitives" }
axiom-protocol = { path = "../../crates/axiom-protocol" }
axiom-crypto = { path = "../../crates/axiom-crypto" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
zeroize = { version = "1.6", features = ["zeroize_derive"] }
hex = "0.4"
sha2 = "0.10"
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
tokio = { version = "1", features = ["full"] }
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
tauri = { version = "2", features = [] }

# Security hardening
keyring = "2"
arboard = "3"
chacha20poly1305 = "0.10"
hkdf = "0.12"
rand = "0.8"
base64 = "0.21"

[build-dependencies]
tauri-build = { version = "2", features = [] }
